a bunch more work on the port